--- a/index.html
+++ b/index.html
@@ -4,32 +4,41 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-04</title>
+    <title>goit-markup-hw-05</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.css" 
+    integrity="sha512-Y0MM+V6ymRKN2zStTqzQ227DWhhp4Mzdo6gnlRnuaNCbc+YN/ZH0sBCLTM4M0oSy9c9VKiCvd4Jk44aCLrNS5Q==" 
+    crossorigin="anonymous" 
+    referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="styles/styles.css"/>
   </head>
   <body>
+
     <header class="header">
       <div class="container">
         <div class="container-nav-contacts">
       <a class="logo" href="/"> <span class="accent-logo"> Web</span>Studio </a>
         <nav>
         <ul class="nav list">
-          <li class="nav-list"><a href="index.html">Cтудия</a></li>
+          <li class="nav-list current"><a href="index.html">Cтудия</a></li>
           <li class="nav-list"><a href="portfolio.html">Портфолио</a></li>
-          <li class="nav-list"><a href="">Контакты</a></li>
+          <li class="nav-list"><a href="./">Контакты</a></li>
         </ul>
       </nav>
       <div class="contacts">
-        <a class="email" href="info@devstudio.com"> <svg class="contact-icon" width="16" height="12"> <use href="./images/sprite.svg#icon-envelope"></use></svg>info@devstudio.com </a>
-        <a class="phone-number" href="tel:+380961111111"> <svg class="contact-icon" width="10" height="16"> <use href="./images/sprite.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
+        <a class="email" href="info@devstudio.com"> 
+          <svg class="contact-icon" 
+          width="16" height="12"> 
+          <use href="./images/sprite.svg#icon-envelope"></use></svg>info@devstudio.com </a>
+        <a class="phone-number" 
+        href="tel:+380961111111"> 
+        <svg class="contact-icon" width="10" height="16"> 
+          <use href="./images/sprite.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
       </div>
     </div>
     </div>
@@ -42,8 +51,19 @@
           Эффективные решения<br />
           для вашего бизнеса
         </h1>
-        <button class="hero-button" type="button"><a href=""></a>Заказать услугу</button>
-       
+        <button class="hero-button" 
+        type="button" data-modal-open>Заказать услугу</button>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal-wrapper">
+          <button class="modal-btn" data-modal-close>
+            <svg class="icon-modal-button" width="18" height="18">
+              <use href="../images/sprite.svg#icon-close-button">
+              </use>
+            </svg>
+          </button>
+          <form class="modal-form"></form>
+          </div>
+        </div>
       </section>
 
       <section class="advantages section">
@@ -459,7 +479,7 @@
             <li class="client">
               <a href="">
               <svg class="client-icon" width="106" height="60">
-                <use href="./images/sprite.svg#icon-client-2"></use>
+                <use href="../images/sprite.svg#icon-client-2"></use>
               </svg>
             </a>
           </li>
@@ -580,5 +600,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
