--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-03</title>
+    <title>goit-markup-hw-05</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,7 +23,7 @@
         <nav>
         <ul class="nav list">
           <li class="nav-list"><a href="index.html">Cтудия</a></li>
-          <li class="nav-list"><a href="portfolio.html">Портфолио</a></li>
+          <li class="nav-list current"><a href="portfolio.html">Портфолио</a></li>
           <li class="nav-list"><a href="">Контакты</a></li>
         </ul>
       </nav>
