Задав ::after для секції діяльності

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                 width="370"
                 alt="Человек печатает на клавиатуре"
               />
+              <p>Десктопные приложения</p>
             </li>
 
             <li>
