виправлення проблеми з іконками клієнтів

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="modal-wrapper">
           <button class="modal-btn" data-modal-close>
             <svg class="icon-modal-button" width="18" height="18">
-              <use href="../images/sprite.svg#icon-close-button">
+              <use href="./images/sprite.svg#icon-close-button">
               </use>
             </svg>
           </button>
@@ -480,7 +480,7 @@
             <li class="client">
               <a href="">
               <svg class="client-icon" width="106" height="60">
-                <use href="../images/sprite.svg#icon-client-2"></use>
+                <use href="./images/sprite.svg#icon-client-2"></use>
               </svg>
             </a>
           </li>
