Зробив оверлей на картки в портфоліо

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                 src="images/first-image.jpg"
                 width="370"
                 alt="Человек печатает на клавиатуре"
-              />
-              <p>Десктопные приложения</p>
+                />
+                <p>Десктопные приложения</p> 
             </li>
 
             <li>
@@ -141,6 +141,7 @@
                 width="370"
                 alt="Человек смотрит в телефон"
               />
+              <p>Мобильные приложения</p>
             </li>
             <li>
 
@@ -149,6 +150,7 @@
                 width="370"
                 alt="Человек рисует на планшете"
               />
+              <p>Дизайнерские решения</p>
             </li>
           </ul>
         </div>
