--- a/portfolio.html
+++ b/portfolio.html
@@ -61,6 +61,7 @@
         <ul class="cards list">
 
           <li>
+            <div class="overlay-container">
             <a class="card-link" href="">
               <img
                 src="portfolio-images/pic-1.jpg"
@@ -68,6 +69,10 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-paragraph">
+              <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+            </div>
+          </div>
               <div class="card-container">
               <h2 class="card-heading">Технокряк</h2>
               <p class="card-paragraph">Веб-сайт</p>
