--- a/portfolio.html
+++ b/portfolio.html
@@ -81,6 +81,7 @@
           </li>
 
           <li>
+            <div class="overlay-container">
             <a class="card-link" href="">
               <img
                 src="portfolio-images/pic-2.jpg"
@@ -88,6 +89,10 @@
                 width="370"
                 height="294"
               />
+            <div class="overlay-paragraph">
+              <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
+            </div>
               <div class="card-container">
               <h2 class="card-heading">Постер New Orlean vs Golden Star</h2>
               <p class="card-paragraph">Дизайн</p>
@@ -97,12 +102,17 @@
 
           <li>
             <a class="card-link" href="">
+              <div class="overlay-container">
               <img
                 src="portfolio-images/pic-3.jpg"
                 alt="Эмблема рыбного ресторана"
                 width="370"
                 height="294"
               />
+              <div class="overlay-paragraph">
+                <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+              </div>
               <div class="card-container">
               <h2 class="card-heading">Ресторан Seafood</h2>
               <p class="card-paragraph">Приложение</p>
@@ -112,12 +122,17 @@
 
           <li>
             <a class="card-link" href="">
+              <div class="overlay-container">
               <img
                 src="portfolio-images/pic-4.jpg"
                 alt="Чёрные наушники"
                 width="370"
                 height="294"
               />
+              <div class="overlay-paragraph">
+                <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+              </div>
               <div class="card-container">
               <h2 class="card-heading">Проект Prime</h2>
               <p class="card-paragraph">Маркетинг</p>
@@ -127,12 +142,17 @@
 
           <li>
             <a class="card-link" href="">
+              <div class="overlay-container">
               <img
                 src="portfolio-images/pic-5.jpg"
                 alt="Изображение двух коробок"
                 width="370"
                 height="294"
               />
+              <div class="overlay-paragraph">
+                <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+              </div>
               <div class="card-container">
               <h2 class="card-heading">Проект Boxes</h2>
               <p class="card-paragraph">Приложение</p>
@@ -142,12 +162,17 @@
 
           <li>
             <a class="card-link" href="">
+              <div class="overlay-container">
               <img
                 src="portfolio-images/pic-6.jpg"
                 alt="Скриншот сайта на экране"
                 width="370"
                 height="294"
               />
+              <div class="overlay-paragraph">
+                <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+              </div>
               <div class="card-container">
               <h2 class="card-heading">Inspiration has no Borders</h2>
               <p class="card-paragraph">Веб-сайт</p>
@@ -157,12 +182,17 @@
 
           <li>
             <a class="card-link" href="">
+              <div class="overlay-container">
               <img
                 src="portfolio-images/pic-7.jpg"
                 alt="Фотография журнала"
                 width="370"
                 height="294"
               />
+              <div class="overlay-paragraph">
+                <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+              </div>
               <div class="card-container">
               <h2 class="card-heading">Издание Limited Edition</h2>
               <p class="card-paragraph">Дизайн</p>
@@ -171,6 +201,7 @@
           </li>
 
           <li>
+            <div class="overlay-container">
             <a class="card-link" href="">
               <img
                 src="portfolio-images/pic-8.jpg"
@@ -178,6 +209,10 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay-paragraph">
+                <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+              </div>
               <div class="card-container">
               <h2 class="card-heading">Проект LAB</h2>
               <p class="card-paragraph">Маркетинг</p>
@@ -187,12 +222,17 @@
           
           <li>
             <a class="card-link" href="">
+              <div class="overlay-container">
               <img
                 src="portfolio-images/pic-9.jpg"
                 alt="Человек печатает на ноутбуке"
                 width="370"
                 height="294"
               />
+              <div class="overlay-paragraph">
+                <p>Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+                </div>
+              </div>
               <div class="card-container">
               <h2 class="card-heading">Growing Business</h2>
               <p class="card-paragraph">Приложение</p>
